# AutoMouse

./: .gitignore  Cargo.toml  LICENSE  README.md  automouse.db  build.rs
src/: main.rs
src/app/: actions.rs  actions_ui.rs  mod.rs  process.rs  send.rs  threads.rs
src/config/: data.rs  mod.rs  set.rs  strucs.rs
src/crud/: sql.rs
src/database/: sql.rs
src/model/: mod.rs  mouse.rs  sql.rs
src/mouse/: mod.rs  others.rs  process.rs  threads.rs
src/state/: global.rs
ui/: app-window.slint  list-macros.slint  setting.slint
