[package]
name = "auto-mouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "=1.8.0"
rdev = "0.5.3"
device_query = "3.0.0"
crossbeam = "0.8.4"
rusqlite = { version = "0.33.0", features = ["bundled"] }
chrono = "0.4.39"

[build-dependencies]
slint-build = "=1.8.0"
